apps/homelab-wordpress/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-wordpress
  labels:
    app.kubernetes.io/name: homelab-wordpress
