apps/homelab-wordpress/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-wordpress-mysql
  namespace: homelab-wordpress
  labels:
    app.kubernetes.io/name: homelab-wordpress
    app.kubernetes.io/component: mysql
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: homelab-wordpress
    app.kubernetes.io/component: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
