apps/homelab-wordpress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-wordpress
  namespace: homelab-wordpress
  labels:
    app.kubernetes.io/name: homelab-wordpress
    app.kubernetes.io/instance: homelab-wordpress
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homelab-wordpress
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
