apps/homelab-wordpress/base/networkpolicy-allow-mysql-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-egress
  namespace: homelab-wordpress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-wordpress
      app.kubernetes.io/component: web
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homelab-wordpress
              app.kubernetes.io/component: mysql
      ports:
        - protocol: TCP
          port: 3306
