apps/homelab-wordpress/base/networkpolicy-allow-mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-ingress
  namespace: homelab-wordpress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-wordpress
      app.kubernetes.io/component: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homelab-wordpress
              app.kubernetes.io/component: web
      ports:
        - protocol: TCP
          port: 3306
