apps/homelab-wordpress/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: homelab-wordpress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
